--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -14,9 +14,15 @@ RUN \
   apk add --no-cache --virtual=build-dependencies \
     gcc \
     make \
-    autoconf \
-    automake \
-    wget && \
+    wget
+
+RUN \
+  apk --no-cache add automake
+
+RUN \
+  apk --no-cache add autoconf
+
+RUN \
   echo "**** install runtime packages ****" && \
   apk add --no-cache \
     vim \
@@ -31,18 +37,21 @@ RUN \
   curl -L http://cpanmin.us | perl - App::cpanminus && \
   cpanm \
     Data::Validate::IP \
-    JSON::Any && \
+    JSON::Any
+
+RUN \    
   echo "**** install ddclient ****" && \
   curl -o /tmp/ddclient.zip -L \
     "https://github.com/ddclient/ddclient/archive/refs/heads/master.zip" && \
   unzip /tmp/ddclient.zip -o -d /tmp/ && \
-  /tmp/ddclient-master/autogen && \
-  ./configure --prefix=/usr --sysconfdir=/etc/ddclient --localstatedir=/var && \
   cd /tmp/ddclient-master/ && \
+  /tmp/ddclient-master/autogen && \
+  /tmp/ddclient-master/configure --prefix=/usr --sysconfdir=/etc/ddclient --localstatedir=/var && \
   make && \
   make VERBOSE=1 check && \
   make install && \
   cp /tmp/ddclient-master/ddclient.in /usr/bin/ddclient.in && \
+  rm /usr/bin/ddclient && \
   ln -s /usr/bin/ddclient.in /usr/bin/ddclient && \
   mkdir -p /etc/ddclient/ && \
   cp /tmp/ddclient-master/sample-get-ip-from-fritzbox /etc/ddclient/get-ip-from-fritzbox && \
